# hestia

./: Containerfile  Makefile  README.md  pyproject.toml
.github/workflows/: oci.yml  publish-wiki.yml  website.yml
docs/: ADR 001 - Модуль натуральных чисел.md  ADR 002 - Модуль целых чисел.md  ADR 003 - Модуль рациональных чисел.md  ADR 004 - Модуль многочленов.md  Home.md  _Sidebar.md  Архитектура.md  Архитектура:-ADR 003 - Модуль рациональных чисел.md  Архитектура:-Общие положения.md  Организация рабочих процессов.md
hestia/: integer.py  main.py  natural.py  polynomial.py  rational.py
hestia/common/: exceptions.py  module_group.py  types.py  utils.py
website/: astro.config.mjs  biome.json  package-lock.json  package.json  tsconfig.json
website/src/: content.config.ts
website/src/components/landing/: Comment.astro  Heading.astro  index.ts
website/src/content/comments/: comments.yaml
website/src/content/docs/: index.mdx
website/src/content/docs/cli/: installation.mdx  overview.mdx  usage.mdx
website/src/content/docs/guides/: installation.mdx  usage.mdx
website/src/content/docs/web/: overview.mdx  run-locally.mdx  usage.mdx
website/src/css/: theme.css
